More than 100Mb of memory allocation per click-selection #54568

Closed
opened 2018-04-11 11:02:00 +02:00 by Erick Tukuniata · 7 comments

System Information
Operating system and graphics card
Win 7 gtx 550ti

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) Hash: c963488
Worked: (optional) Hash: 3c45fdd My own back up build

Short description of error
Selecting a mesh in object mode and in pose mode stores more than 100mb per click in files that are bigger than 200mb

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Open Franck (blend file) franck_sheep.blend
  • Start to click select (no need to move your mouse), notice how the memory increases.
  • On my side when i reached the default 32 undo-step i m having more than 3 GB of memory allocated. memory_bug.png Compare to hash 3c45fdd memory_bug_2.png
  • Go to edit mode and click select again and notice how the memory is decreasing.

It seems like some Linux user couldn't reproduce it but i did reproduce it in so many windows machine even on a 32bit machine.

**System Information** Operating system and graphics card Win 7 gtx 550ti **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Hash: c963488 Worked: (optional) Hash: 3c45fdd My own back up build **Short description of error** Selecting a mesh in object mode and in pose mode stores more than 100mb per click in files that are bigger than 200mb **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - Open Franck (blend file) [franck_sheep.blend](https://archive.blender.org/developer/F2659327/franck_sheep.blend) - Start to click select (no need to move your mouse), notice how the memory increases. - On my side when i reached the default 32 undo-step i m having more than 3 GB of memory allocated. ![memory_bug.png](https://archive.blender.org/developer/F2659297/memory_bug.png) Compare to hash 3c45fdd ![memory_bug_2.png](https://archive.blender.org/developer/F2659324/memory_bug_2.png) - Go to edit mode and click select again and notice how the memory is decreasing. It seems like some Linux user couldn't reproduce it but i did reproduce it in so many windows machine even on a 32bit machine.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2018-04-12 15:38:21 +02:00

Caused by 651b8fb14e.

Caused by 651b8fb14e.

Added subscriber: @nudelZ

Added subscriber: @nudelZ

i guess my problem is related to that here (or should i make a different report?)

the problem is even worse with many multires objects (3-5gb per klick :/) heres a video demonstration -> youtube
its very easy to replicate just add a few multires objects and switch between the layer

i guess my problem is related to that here (or should i make a different report?) the problem is even worse with many multires objects (3-5gb per klick :/) heres a video demonstration -> [youtube ](https://youtu.be/8zM80iF6qs8) its very easy to replicate just add a few multires objects and switch between the layer

This issue was referenced by 2e9b92b5cc

This issue was referenced by 2e9b92b5ccac07f63c1b535cfb25e013e01a141b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54568
No description provided.