Fix T54568: Undo memory de-duplication failed

Error in 651b8fb14e caused de-duplication to fail.